# tea_store

./: .env  .env.sample  README.md  main_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
main/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
main/fixtures/: data.json
main/management/: __init__.py
main/management/commands/: __init__.py  fill.py  fill_db.py
main/migrations/: 0001_initial.py  0002_alter_teacategory_options_teacategory_description_and_more.py  0003_teaproduct_in_stock_alter_teacategory_name.py  0004_alter_teaproduct_options_teaproduct_slug.py  0005_alter_teaproduct_slug.py  0006_alter_teacategory_image_alter_teaproduct_preview.py  0007_alter_teaproduct_name_version.py  0008_version_text_alter_version_is_active.py  0009_alter_version_unique_together.py
main/templates/main/: catalog.html  category.html  contact.html  index.html  product.html  (+3 more)
main/templatetags/: main_tags.py
store_blog/: admin.py  apps.py  blog_data.json  models.py  urls.py  views.py
store_blog/migrations/: 0001_initial.py  0002_article_author_alter_article_image_and_more.py  0003_article_post_author.py  0004_remove_article_author.py  0005_rename_post_author_article_author.py
templates/: base.html
templates/includes/: background_section.html  empty_page.html  title.html
users/: authentication.py  forms.py  models.py  pipeline.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_alter_user_email.py  0004_user_activation_token.py
(+18 files in other folders)
