[tool.poetry]
name = "tea-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.17.2"
python-dotenv = "^1.0.0"
django-extensions = "^3.2.3"
social-auth-app-django = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
